--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,26 @@
 
   <body>
       <div>
-          <%= link_to 'Home', home_path %>
+          <%= link_to 'Home', root_path %>
           <%= link_to 'About', about_path %>
           <%= link_to 'Posts', posts_path %>
           <%= link_to 'New', new_post_path %>
-          <%= form_tag search_post_path do%>
-              <%= text_field_tag :search %>
+          <% if user_signed_in? %>
+              Hello <%= link_to current_user.first_name, edit_user_path(current_user) %>
+              <%= link_to 'Favourite Posts', posts_path(show_favs: true)%>
+              <%= link_to 'Sign Out', sessions_path, method: :delete %>
+          <% else %>
+              <%= link_to 'Sign Up', new_user_path %>
+              <%= link_to 'Sign In', new_session_path %>
+          <% end %>
+      </div>
+      <div>
+          <%= form_tag posts_path, method: :GET do%>
+              <%= text_field_tag :query, session[:query] %>
               <%= submit_tag 'Search Posts'%>
           <% end %>
       </div>
-    <%= yield %>
+      <%= flash[:notice] || flash[:alert] %>
+      <%= yield %>
   </body>
 </html>
