--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,16 +1,3 @@
 <h1>Edit <%= @post.title %></h1>
 
-<%= @post.errors.full_messages.join(', ') %>
-
-<%= form_for @post do |f| %>
-    <div>
-        <%= f.label :title%>
-        <%= f.text_field :title %>
-    </div>
-    <div>
-        <%= f.label :body%>
-        <%= f.text_area :body %>
-    </div>
-    <%= f.submit %>
-<% end %>
-
+<%= render 'form' %>
