--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,3 @@
 <h1>Create a New Post</h1>
-<%= @post.errors.full_messages.join(', ') %>
 
-<%= form_for @post do |f| %>
-    <div>
-        <%= f.label :title%>
-        <%= f.text_field :title %>
-    </div>
-    <div>
-        <%= f.label :body%>
-        <%= f.text_area :body %>
-    </div>
-    <%= f.submit %>
-<% end %>
+<%= render 'form' %>
