--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,37 @@
 <h1><%= @post.title %></h1>
-
+<h3>Category: <%= @post.category.title %></h3>
 <p>
     <%= @post.body %>
 </p>
-<%= link_to 'edit', edit_post_path(@post) %>
-<%= link_to 'delete', post_path(@post), method: :delete, data: {confirm: 'Delete post?'} %>
+<% if user_signed_in? %>
+    <% if can?(:favourite, @post) %>
+    <div>
+        <% if fav = @post.favourites.find_by(user_id: current_user.id) %>
+            <%= link_to 'un-favourite', favourite_path(fav), method: :delete %>
+        <% else %>
+            <%= link_to 'favourite', post_favourites_path(@post), method: :post %>
+        <% end %>
+    </div>
+    <% end %>
+
+    <% if can?(:manage, @post) %>
+        <div>
+            <%= link_to 'edit', edit_post_path(@post) %>
+            <%= link_to 'delete', post_path(@post), method: :delete, data: {confirm: 'Delete post?'} %>
+        </div>
+    <% end %>
+<% end %>
+<h3>New Comment: </h3>
+<%= form_for [@post, @comment] do |f| %>
+    <%= f.text_area :body %>
+    <%= f.submit %>
+<% end %>
+<hr/>
+<% unless @post.comments.length == 0 %>
+    <h3>Comments</h3>
+    <% @post.comments.each do |c| %>
+        <p>
+            <%= c.body %>
+        </p>
+    <% end %>
+<% end %>
