--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,13 +5,9 @@
 </p>
 <% if user_signed_in? %>
     <% if can?(:favourite, @post) %>
-    <div>
-        <% if fav = @post.favourites.find_by(user_id: current_user.id) %>
-            <%= link_to 'un-favourite', favourite_path(fav), method: :delete %>
-        <% else %>
-            <%= link_to 'favourite', post_favourites_path(@post), method: :post %>
-        <% end %>
-    </div>
+        <div id="fav_link">
+            <%= render 'favourites/link' %>
+        </div>
     <% end %>
 
     <% if can?(:manage, @post) %>
@@ -22,16 +18,15 @@
     <% end %>
 <% end %>
 <h3>New Comment: </h3>
-<%= form_for [@post, @comment] do |f| %>
-    <%= f.text_area :body %>
-    <%= f.submit %>
-<% end %>
+<div id="comment_form">
+    <%= render 'comments/form' %>
+</div>
 <hr/>
 <% unless @post.comments.length == 0 %>
     <h3>Comments</h3>
-    <% @post.comments.each do |c| %>
-        <p>
-            <%= c.body %>
-        </p>
-    <% end %>
+    <div id="comments">
+        <% @post.comments.each do |c| %>
+            <%= render 'comments/comment', {c: c} %>
+        <% end %>
+    </div>
 <% end %>
